chore: modernize new URL(String) → URI.create(String).toURL() (11 sites)
`new URL(String)` was deprecated in Java 20. The recommended replacement
parses via URI.create first (stricter validation), then converts to URL.

Sites:
  - ParticipantPortalRegistrar.java (3)
  - EnketoAPI.java (4)
  - EditFormController.java
  - StudyModuleController.java
  - SystemController.java
  - SecureController.java

All sites are inside try/catch blocks or methods declaring
`throws MalformedURLException`. URI.create throws unchecked
IllegalArgumentException on malformed input; .toURL() still surfaces
MalformedURLException — no runtime semantics change in the normal paths.

Adds `java.net.URI` import where needed.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>